[workspace]
members = ["contracts/*"]
resolver = "2"

[profile.release.package.token-reflect]
codegen-units = 1
incremental = false

[profile.release.package.tokenfactory]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
